# EfficientIR

./: .gitignore  api_server.py  db_manager.py  main.py  pyproject.toml  utils.py  备份.py
gui/: MyWidget.py  config.json  simple.ui
webapp/: index.html
